# unreal-mcp

./: README.md  pyproject.toml  unreal_actors.py  unreal_assets.py  unreal_cli.py  unreal_connection.py  unreal_mcp_server.py  unreal_remote.py  unreal_utils.py
.github/skills/unreal-castle-builder/: SKILL.md
.github/skills/unreal-castle-builder/references/: castle-workflow.md
examples/: __init__.py
examples/castle/: __init__.py  workflow.py
examples/castle/assets/: castle-plan.json
examples/castle/specs/: CastleConstruction.cfg  CastleConstruction.tla
tests/: test_castle_assets.py  test_castle_workflow.py  test_unreal_cli.py
unreal_mcp/: __init__.py  actors.py  assets.py  cli.py  connection.py  remote.py  server.py  utils.py
