[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "unreal-mcp-dev"
version = "0.1.0"
description = "Direct Unreal Remote Control CLI and MCP server helpers"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.26.0",
  "requests>=2.33.1"
]

[project.scripts]
unreal-mcp-cli = "unreal_mcp.cli:main"

[tool.setuptools]
py-modules = [
  "unreal_actors",
  "unreal_assets",
  "unreal_cli",
  "unreal_connection",
  "unreal_mcp_server",
  "unreal_remote",
  "unreal_utils"
]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["unreal_mcp*", "examples*"]

[tool.setuptools.package-data]
"examples.castle" = ["assets/*.json", "specs/*.tla", "specs/*.cfg"]